tests/paczka1/small_fuzzy/94413810.err
Error in line 3: 0Ks8rGa A464 30,8
Error in line 1: sLj A73 26,3
Error in line 4: 0Ks8rGa S718 90,0
Error in line 5: sLj S718 69,0
Error in line 15: c05XUZgd A73 56,5
